log
Thu Mar 12 07:15:02 PM UTC 2026: 
 tests:  1|4
total_score: 10/70
c2981aa
Thu Mar 19 07:12:45 PM UTC 2026: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:70:23: error: ‘elmento’ undeclared (first use in this function); did you mean ‘elemento’?
   70 |          if ((*(int*) elmento) == elem) popcurrent( L );
      |                       ^~~~~~~
      |                       elemento
exercises.c:70:23: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:70:41: error: implicit declaration of function ‘popcurrent’; did you mean ‘popCurrent’? [-Wimplicit-function-declaration]
   70 |          if ((*(int*) elmento) == elem) popcurrent( L );
      |                                         ^~~~~~~~~~
      |                                         popCurrent
faf85a8
Thu Mar 19 07:13:07 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:70:23: error: ‘elmento’ undeclared (first use in this function); did you mean ‘elemento’?
   70 |          if ((*(int*) elmento) == elem) popCurrent( L );
      |                       ^~~~~~~
      |                       elemento
exercises.c:70:23: note: each undeclared identifier is reported only once for each function it appears in
cb7675d
Thu Mar 19 07:14:36 PM UTC 2026: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:72:25: error: expected ‘;’ before ‘}’ token
   72 |       elemento = next(L)
      |                         ^
      |                         ;
   73 | 
   74 | }
      | ~                        
7a54de0
Thu Mar 19 07:14:39 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:72:25: error: expected ‘;’ before ‘}’ token
   72 |       elemento = next(L)
      |                         ^
      |                         ;
   73 | 
   74 | }
      | ~                        
3b58b45
Thu Mar 19 07:27:50 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 20/70
e4ddeb1
Thu Mar 19 07:33:40 PM UTC 2026: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   48 |       dato = malloc( sizeof(int) );
      |            ^
exercises.c:50:20: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Wint-conversion]
   50 |       pushBack(L , dato);
      |                    ^~~~
      |                    |
      |                    int
In file included from exercises.c:6:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘int’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
45037a4
Thu Mar 19 07:37:22 PM UTC 2026: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 30/70
a902e83
Thu Mar 19 07:44:32 PM UTC 2026: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:21: error: implicit declaration of function ‘firs’; did you mean ‘first’? [-Wimplicit-function-declaration]
   64 |    void* elemento = firs(L);
      |                     ^~~~
      |                     first
exercises.c:64:21: error: initialization of ‘void *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
bfe7a1d
Thu Mar 19 07:44:41 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
ca73b53
Thu Mar 19 07:45:58 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 30/70
e0799ef
Thu Mar 19 07:47:45 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
abaea0b
Thu Mar 19 07:56:40 PM UTC 2026: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  3|2
total_score: 40/70
61597cb
